--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -230,7 +230,6 @@
                 this.selectedIndex =0;
             });
         }
-
         //On Ready
         $(document).ready(function () {
             //pop type
@@ -352,6 +351,12 @@
             var lotNumber2 = getField('lot-number-2.value').val();
             var expiryDate1 = getField('expiry-date.value').val();
             var expiryDate2 = getField('expiry-date2.value').val();
+            var firstKit = getField("kit-name-1.value").val();
+            var secondKit = getField("kit-name-2.value").val();
+            if(firstKit ==164960 &amp;&amp; secondKit == 164960 || firstKit ==164961 &amp;&amp; secondKit == 164961 ) {
+                getField('kit-name-2.error').html('Cannot use same test kit for both tests.').show();
+                return false;
+            }
             if (hivTest1 == false ) {      //check hiv test 1 results mandatory
                 getField('hiv-test1-result.error').html('Please specify HIV Test 1 results.').show();
                 return false;
